# local-chat

./: .gitignore  API.md  BUILD.md  BUILD_FIX.md  CRITICAL_FIX.md  CROSS_PLATFORM_DEBUG.md  Cargo.toml  DEBUG_CHECKLIST.md  DISCOVERY_FIXES.md  FINAL_SUMMARY.md  FIXES_AND_TROUBLESHOOTING.md  ICONS_REQUIRED.md  LICENSE  MACOS_FIX.md  MAC_BUILD_INSTRUCTIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  fix-firewall.cmd  fix-network-profile.cmd  mac-log  run-dev.cmd  test-connectivity.ps1  test-diagnostic-mac.sh  test-diagnostic.ps1  test-multicast-receive.ps1  test-multicast-send.ps1
crates/core/: Cargo.toml
crates/core/src/: error.rs  events.rs  lib.rs  message.rs  peer.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  keypair.rs  lib.rs  signature.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  protocol.rs  service.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: connection.rs  lib.rs  messages.rs  server.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs  protocol.rs  service.rs
desktop/: index.html  package-lock.json  package.json  postcss.config.js
desktop/src/: App.tsx  api.ts  index.css  store.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  main.rs  state.rs
desktop/src/components/: ChatWindow.tsx  PeerList.tsx  Sidebar.tsx  WelcomeScreen.tsx
