[workspace]
members = [
    "crates/core",
    "crates/protocol",
    "crates/crypto",
    "crates/discovery",
    "crates/transfer",
    "desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Local IP Chat Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Networking
socket2 = "0.5"
quinn = "0.11"

# Cryptography
ring = "0.17"
rsa = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Local dependencies
lan-chat-core = { path = "crates/core" }
lan-chat-protocol = { path = "crates/protocol" }
lan-chat-crypto = { path = "crates/crypto" }
lan-chat-discovery = { path = "crates/discovery" }
lan-chat-transfer = { path = "crates/transfer" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
