[package]
name = "lan-chat-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lan-chat-core.workspace = true

ring.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2 = "0.10"
