[package]
name = "lan-chat-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lan-chat-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
socket2.workspace = true
uuid.workspace = true
