[package]
name = "lan-chat-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
lan-chat-core.workspace = true
lan-chat-protocol.workspace = true
lan-chat-crypto.workspace = true
lan-chat-discovery.workspace = true
lan-chat-transfer.workspace = true

tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
